--- a/model.ipynb
+++ b/model.ipynb
@@ -10,19 +10,68 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.6"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "pythonjvsc74a57bd0d56d92bfe18e338fca9330cc11fbdc9ce2394a956871bac79070cba5d437aed6",
+   "display_name": "Python 3.7.6  ('venv': venv)"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "d56d92bfe18e338fca9330cc11fbdc9ce2394a956871bac79070cba5d437aed6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "Student Answer -> Bert encoding\\\n",
+    "Question -> BERT encoding ------.->cross attention"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bert_embedding import BertEmbedding\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_abstract = \"\"\"We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers.\n",
+    " Unlike recent language representation models, BERT is designed to pre-train deep bidirectional representations by jointly conditioning on both left and right context in all layers.\n",
+    " As a result, the pre-trained BERT representations can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications. \n",
+    "BERT is conceptually simple and empirically powerful. \n",
+    "It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE benchmark to 80.4% (7.6% absolute improvement), MultiNLI accuracy to 86.7 (5.6% absolute improvement) and the SQuAD v1.1 question answering Test F1 to 93.2 (1.5% absolute improvement), outperforming human performance by 2.0%.\"\"\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Evaluator:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def getBertEncoding(self,paragraph):\n",
+    "        sentences = paragraph.split('.')\n",
+    "        bert_embedding = BertEmbedding\n",
+    "        result = bert_embedding(sentences)\n",
+    "        return result"
+   ]
   }
  ]
 }
