With cross attention

--- a/model.ipynb
+++ b/model.ipynb
@@ -14,8 +14,9 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "pythonjvsc74a57bd0d56d92bfe18e338fca9330cc11fbdc9ce2394a956871bac79070cba5d437aed6",
-   "display_name": "Python 3.7.6  ('venv': venv)"
+   "name": "myenv",
+   "display_name": "myenv",
+   "language": "python"
   },
   "metadata": {
    "interpreter": {
@@ -36,11 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bert_embedding import BertEmbedding\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
@@ -72,6 +93,132 @@
     "        result = bert_embedding(sentences)\n",
     "        return result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attention(query, key, value, mask=None, dropout=None):\n",
+    "    \"Compute 'Scaled Dot Product Attention'\"\n",
+    "    d_k = query.size(-1)\n",
+    "    scores = torch.matmul(query, key.transpose(-2, -1)) \\\n",
+    "             / math.sqrt(d_k)\n",
+    "    if mask is not None:\n",
+    "        scores = scores.masked_fill(mask == 0, -1e9)\n",
+    "    p_attn = F.softmax(scores, dim = -1)\n",
+    "    if dropout is not None:\n",
+    "        p_attn = dropout(p_attn)\n",
+    "    return torch.matmul(p_attn, value), p_attn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_ans = \"Sky is red\"\n",
+    "question = \"What is the colour of the sky?\"\n",
+    "reference_ans =\"Sky appears blue\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getBertEncoding(paragraph):\n",
+    "        sentences = paragraph.split('.')\n",
+    "        bert_embedding = BertEmbedding()\n",
+    "        result = bert_embedding(sentences)\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = getBertEncoding(student_ans)\n",
+    "Q = getBertEncoding(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K_values = K[0][1]\n",
+    "Q_values = Q[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K_values = np.array(K_values)\n",
+    "Q_values = np.array(Q_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = torch.from_numpy(K_values)\n",
+    "Q = torch.from_numpy(Q_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cross_attention = attention(Q,K,K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tensor([[0.7137, 0.1191, 0.1672],\n",
+       "        [0.0628, 0.8501, 0.0871],\n",
+       "        [0.1534, 0.6523, 0.1942],\n",
+       "        [0.2714, 0.3641, 0.3644],\n",
+       "        [0.1581, 0.6745, 0.1674],\n",
+       "        [0.1706, 0.6694, 0.1599],\n",
+       "        [0.5924, 0.2356, 0.1720],\n",
+       "        [0.1272, 0.2982, 0.5746]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 133
+    }
+   ],
+   "source": [
+    "cross_attention[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
