With basic class definitions

--- a/model.ipynb
+++ b/model.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +129,28 @@
    "source": [
     "K = getBertEncoding(student_ans)\n",
     "Q = getBertEncoding(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.3888, -0.0291,  0.1319,  ..., -0.1076,  0.6338,  0.1131],\n",
+       "        [ 0.4132, -0.4602,  0.1156,  ..., -0.4592,  0.2432, -0.1767],\n",
+       "        [-0.0073,  0.1035,  0.0836,  ..., -0.1410,  0.6221, -0.1113]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "K"
    ]
   },
   {
@@ -153,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +249,7 @@
    "source": [
     "class FeedForwardLayer(nn.Module):\n",
     "    def __init__(self,inp_dim,hid_dim,dropout = 0.1):\n",
-    "        super().__init__()\n",
+    "        super(FeedForwardLayer, self).__init__()\n",
     "        self.inp_dim = inp_dim\n",
     "        self.hid_sim = hid_dim\n",
     "        self.hidden = nn.Linear(inp_dim,hid_dim)\n",
@@ -245,27 +267,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNorm(nn.Module):\n",
+    "    \"Construct a layernorm module (See citation for details).\"\n",
+    "    def __init__(self, features, eps=1e-6):\n",
+    "        super(LayerNorm, self).__init__()\n",
+    "        self.a_2 = nn.Parameter(torch.ones(features))\n",
+    "        self.b_2 = nn.Parameter(torch.zeros(features))\n",
+    "        self.eps = eps\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mean = x.mean(-1, keepdim=True)\n",
+    "        std = x.std(-1, keepdim=True)\n",
+    "        return self.a_2 * (x - mean) / (std + self.eps) + self.b_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SublayerConnection(nn.Module):\n",
+    "    \"\"\"\n",
+    "    A residual connection followed by a layer norm.\n",
+    "    Note for code simplicity the norm is first as opposed to last.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, size, dropout):\n",
+    "        super(SublayerConnection, self).__init__()\n",
+    "        self.norm = LayerNorm(size)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x, sublayer):\n",
+    "        \"Apply residual connection to any sublayer with the same size.\"\n",
+    "        return x + self.dropout(sublayer(self.norm(x)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class EncoderBlock(nn.Module):\n",
-    "    def __init__(self,Value,Query,attentionBlock,feedForwardBlock,normBlock):\n",
-    "        super().__init__()\n",
-    "        self.value = Value\n",
-    "        self.query = Query\n",
+    "    def __init__(self,attentionBlock,feedForwardBlock,size,dropout):\n",
+    "        super(EncoderBlock,self).__init__()\n",
     "        self.attentionBlock = attentionBlock\n",
     "        self.feedForwardBlock = feedForwardBlock\n",
-    "        self.normBlock = normBlock\n",
+    "        self.sublayer = clones(SublayerConnection(size,dropout),2)\n",
     "\n",
-    "    def forward(self,x):\n",
-    "\n",
-    "        att = self.attentionBlock(x)\n",
-    "        x = self.normBlock(att,x)\n",
-    "        ff = lambda(x, self.feedForwardBlock(x))\n",
-    "        x = normBlock(ff)\n",
-    "\n",
-    "        return x\n",
+    "    def forward(self,Query,Value):\n",
+    "        Query = self.attentionBlock(query = Query, key = Value, value = Value)\n",
+    "        x = self.sublayer[0](Query, lambda x: self.attentionBlock(query=x, value=Value, key=Value))\n",
+    "        return self.sublayer[1](x, self.feedForwardBlock)\n",
     "\n",
     "    "
    ]
@@ -277,7 +334,15 @@
    "outputs": [],
    "source": [
     "class EncoderModule(nn.Module):\n",
-    "    def __init__(self,Question,Answer)"
+    "    def __init__(self, EncoderLayer,N):\n",
+    "        super(EncoderModule,self).__init__()\n",
+    "        self.layers = clones(EncoderLayer,N)\n",
+    "        self.norm = LayerNorm(self.EncoderLayer.size\n",
+    "    \n",
+    "    def forward(self,Query,Value):\n",
+    "        for layers in self.layers:\n",
+    "            Query = layers(Query = Query,Value = Value)\n",
+    "        return Query\n"
    ]
   },
   {
@@ -287,8 +352,22 @@
    "outputs": [],
    "source": [
     "class RepresentationModule(nn.Module):\n",
-    "    def __init__"
+    "    def __init__(self,EncoderModule):\n",
+    "        super(RepresentationModule,self).__init__()\n",
+    "        self.EncoderModules = clones(EncoderModule,2)\n",
+    "        #Get 2 clones of EncoderModule\n",
+    "    def forward(self, Question, ReferenceAnswer, StudentAnswer):\n",
+    "        studentAnsRep = EncoderModules[0](Question,StudentAnswer)\n",
+    "        RefAnsRep = EncoderModules[1](Question,ReferenceAnswer)\n",
+    "        return concat(studentAnsRep,RefAnsRep)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -429,6 +508,92 @@
    ],
    "source": [
     "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "mxnet 1.4.0 requires requests<2.19.0,>=2.18.4, but you have requests 2.25.1 which is incompatible.\n",
+      "Collecting pytorch-pretrained-bert\n",
+      "  Downloading pytorch_pretrained_bert-0.6.2-py3-none-any.whl (123 kB)\n",
+      "Requirement already satisfied: requests in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (2.18.4)\n",
+      "Requirement already satisfied: torch>=0.4.1 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (1.8.1+cpu)\n",
+      "Collecting boto3\n",
+      "  Downloading boto3-1.17.97-py2.py3-none-any.whl (131 kB)\n",
+      "Requirement already satisfied: numpy in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (1.14.6)\n",
+      "Collecting tqdm\n",
+      "  Downloading tqdm-4.61.1-py2.py3-none-any.whl (75 kB)\n",
+      "Collecting regex\n",
+      "  Downloading regex-2021.4.4-cp37-cp37m-win_amd64.whl (269 kB)\n",
+      "Requirement already satisfied: typing-extensions in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from torch>=0.4.1->pytorch-pretrained-bert) (3.7.4.3)\n",
+      "Collecting botocore<1.21.0,>=1.20.97\n",
+      "  Downloading botocore-1.20.97-py2.py3-none-any.whl (7.6 MB)\n",
+      "Collecting jmespath<1.0.0,>=0.7.1\n",
+      "  Downloading jmespath-0.10.0-py2.py3-none-any.whl (24 kB)\n",
+      "Collecting s3transfer<0.5.0,>=0.4.0\n",
+      "  Downloading s3transfer-0.4.2-py2.py3-none-any.whl (79 kB)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from botocore<1.21.0,>=1.20.97->boto3->pytorch-pretrained-bert) (2.8.1)\n",
+      "Collecting urllib3<1.27,>=1.25.4\n",
+      "  Using cached urllib3-1.26.5-py2.py3-none-any.whl (138 kB)\n",
+      "Requirement already satisfied: six>=1.5 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.21.0,>=1.20.97->boto3->pytorch-pretrained-bert) (1.15.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from requests->pytorch-pretrained-bert) (2020.12.5)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from requests->pytorch-pretrained-bert) (2.6)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from requests->pytorch-pretrained-bert) (3.0.4)\n",
+      "Collecting requests\n",
+      "  Using cached requests-2.25.1-py2.py3-none-any.whl (61 kB)\n",
+      "Installing collected packages: urllib3, jmespath, botocore, s3transfer, tqdm, requests, regex, boto3, pytorch-pretrained-bert\n",
+      "  Attempting uninstall: urllib3\n",
+      "    Found existing installation: urllib3 1.22\n",
+      "    Uninstalling urllib3-1.22:\n",
+      "      Successfully uninstalled urllib3-1.22\n",
+      "  Attempting uninstall: requests\n",
+      "    Found existing installation: requests 2.18.4\n",
+      "    Uninstalling requests-2.18.4:\n",
+      "      Successfully uninstalled requests-2.18.4\n",
+      "Successfully installed boto3-1.17.97 botocore-1.20.97 jmespath-0.10.0 pytorch-pretrained-bert-0.6.2 regex-2021.4.4 requests-2.25.1 s3transfer-0.4.2 tqdm-4.61.1 urllib3-1.26.5\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy.core._multiarray_umath'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy.core._multiarray_umath'"
+     ]
+    }
+   ],
+   "source": [
+    "%run BERT_embeddings.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ImportError",
+     "evalue": "cannot import name '_multiarray_umath' from 'numpy.core' (d:\\Adi\\work\\CLG\\Capstone\\Capstone\\venv\\lib\\site-packages\\numpy\\core\\__init__.py)",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-5d2dede0532b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0m_multiarray_umath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name '_multiarray_umath' from 'numpy.core' (d:\\Adi\\work\\CLG\\Capstone\\Capstone\\venv\\lib\\site-packages\\numpy\\core\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy.core import _multiarray_umath"
    ]
   },
   {
