--- a/BERT_embeddings.ipynb
+++ b/BERT_embeddings.ipynb
@@ -7,11 +7,16 @@
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "myenv",
+      "display_name": "myenv",
+      "language": "python"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.7.6"
+    },
+    "interpreter": {
+      "hash": "2df301fc6d32d51edd36f680860d8bb745d118932bd272267df08934ac32c618"
     }
   },
   "cells": [
@@ -25,32 +30,91 @@
         "outputId": "510e598e-af5d-4734-fc28-698ba488d609"
       },
       "source": [
-        "! pip install pytorch-pretrained-bert"
+        "! pip install pytorch-pretrained-bert\n",
+        "! pip install logging"
       ],
-      "execution_count": 19,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Requirement already satisfied: pytorch-pretrained-bert in /usr/local/lib/python3.7/dist-packages (0.6.2)\n",
-            "Requirement already satisfied: torch>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from pytorch-pretrained-bert) (1.8.1+cu101)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from pytorch-pretrained-bert) (4.41.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from pytorch-pretrained-bert) (1.19.5)\n",
-            "Requirement already satisfied: boto3 in /usr/local/lib/python3.7/dist-packages (from pytorch-pretrained-bert) (1.17.97)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from pytorch-pretrained-bert) (2.23.0)\n",
-            "Requirement already satisfied: regex in /usr/local/lib/python3.7/dist-packages (from pytorch-pretrained-bert) (2019.12.20)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from torch>=0.4.1->pytorch-pretrained-bert) (3.7.4.3)\n",
-            "Requirement already satisfied: botocore<1.21.0,>=1.20.97 in /usr/local/lib/python3.7/dist-packages (from boto3->pytorch-pretrained-bert) (1.20.97)\n",
-            "Requirement already satisfied: s3transfer<0.5.0,>=0.4.0 in /usr/local/lib/python3.7/dist-packages (from boto3->pytorch-pretrained-bert) (0.4.2)\n",
-            "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /usr/local/lib/python3.7/dist-packages (from boto3->pytorch-pretrained-bert) (0.10.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->pytorch-pretrained-bert) (2021.5.30)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->pytorch-pretrained-bert) (1.24.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->pytorch-pretrained-bert) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->pytorch-pretrained-bert) (3.0.4)\n",
-            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.7/dist-packages (from botocore<1.21.0,>=1.20.97->boto3->pytorch-pretrained-bert) (2.8.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.21.0,>=1.20.97->boto3->pytorch-pretrained-bert) (1.15.0)\n"
-          ],
-          "name": "stdout"
+            "Requirement already satisfied: pytorch-pretrained-bert in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (0.6.2)\n",
+            "Requirement already satisfied: torch>=0.4.1 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (1.8.1+cpu)\n",
+            "Requirement already satisfied: numpy in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (1.14.6)\n",
+            "Requirement already satisfied: tqdm in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (4.61.1)\n",
+            "Requirement already satisfied: requests in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (2.25.1)\n",
+            "Requirement already satisfied: boto3 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (1.17.97)\n",
+            "Requirement already satisfied: regex in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from pytorch-pretrained-bert) (2021.4.4)\n",
+            "Requirement already satisfied: typing-extensions in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from torch>=0.4.1->pytorch-pretrained-bert) (3.7.4.3)\n",
+            "Requirement already satisfied: botocore<1.21.0,>=1.20.97 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from boto3->pytorch-pretrained-bert) (1.20.97)\n",
+            "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from boto3->pytorch-pretrained-bert) (0.10.0)\n",
+            "Requirement already satisfied: s3transfer<0.5.0,>=0.4.0 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from boto3->pytorch-pretrained-bert) (0.4.2)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.25.4 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from botocore<1.21.0,>=1.20.97->boto3->pytorch-pretrained-bert) (1.26.5)\n",
+            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from botocore<1.21.0,>=1.20.97->boto3->pytorch-pretrained-bert) (2.8.1)\n",
+            "Requirement already satisfied: six>=1.5 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.21.0,>=1.20.97->boto3->pytorch-pretrained-bert) (1.15.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from requests->pytorch-pretrained-bert) (2.6)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from requests->pytorch-pretrained-bert) (2020.12.5)\n",
+            "Requirement already satisfied: chardet<5,>=3.0.2 in d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages (from requests->pytorch-pretrained-bert) (3.0.4)\n",
+            "Collecting logging    ERROR: Command errored out with exit status 1:\n",
+            "     command: 'd:\\adi\\work\\clg\\capstone\\capstone\\venv\\scripts\\python.exe' -c 'import io, os, sys, setuptools, tokenize; sys.argv[0] = '\"'\"'C:\\\\Users\\\\adith\\\\AppData\\\\Local\\\\Temp\\\\pip-install-xxvn6ssr\\\\logging_97fc9a54fbe04b75bc8a877d62614080\\\\setup.py'\"'\"'; __file__='\"'\"'C:\\\\Users\\\\adith\\\\AppData\\\\Local\\\\Temp\\\\pip-install-xxvn6ssr\\\\logging_97fc9a54fbe04b75bc8a877d62614080\\\\setup.py'\"'\"';f = getattr(tokenize, '\"'\"'open'\"'\"', open)(__file__) if os.path.exists(__file__) else io.StringIO('\"'\"'from setuptools import setup; setup()'\"'\"');code = f.read().replace('\"'\"'\\r\\n'\"'\"', '\"'\"'\\n'\"'\"');f.close();exec(compile(code, __file__, '\"'\"'exec'\"'\"'))' egg_info --egg-base 'C:\\Users\\adith\\AppData\\Local\\Temp\\pip-pip-egg-info-wamx9dli'\n",
+            "         cwd: C:\\Users\\adith\\AppData\\Local\\Temp\\pip-install-xxvn6ssr\\logging_97fc9a54fbe04b75bc8a877d62614080\\\n",
+            "    Complete output (48 lines):\n",
+            "    running egg_info\n",
+            "    creating C:\\Users\\adith\\AppData\\Local\\Temp\\pip-pip-egg-info-wamx9dli\\logging.egg-info\n",
+            "    writing C:\\Users\\adith\\AppData\\Local\\Temp\\pip-pip-egg-info-wamx9dli\\logging.egg-info\\PKG-INFO\n",
+            "    writing dependency_links to C:\\Users\\adith\\AppData\\Local\\Temp\\pip-pip-egg-info-wamx9dli\\logging.egg-info\\dependency_links.txt\n",
+            "    writing top-level names to C:\\Users\\adith\\AppData\\Local\\Temp\\pip-pip-egg-info-wamx9dli\\logging.egg-info\\top_level.txt\n",
+            "    writing manifest file 'C:\\Users\\adith\\AppData\\Local\\Temp\\pip-pip-egg-info-wamx9dli\\logging.egg-info\\SOURCES.txt'\n",
+            "    Traceback (most recent call last):\n",
+            "      File \"<string>\", line 1, in <module>\n",
+            "      File \"C:\\Users\\adith\\AppData\\Local\\Temp\\pip-install-xxvn6ssr\\logging_97fc9a54fbe04b75bc8a877d62614080\\setup.py\", line 13, in <module>\n",
+            "        packages = [\"logging\"],\n",
+            "      File \"c:\\users\\adith\\appdata\\local\\programs\\python\\python37\\lib\\distutils\\core.py\", line 148, in setup\n",
+            "        dist.run_commands()\n",
+            "      File \"c:\\users\\adith\\appdata\\local\\programs\\python\\python37\\lib\\distutils\\dist.py\", line 966, in run_commands\n",
+            "        self.run_command(cmd)\n",
+            "      File \"c:\\users\\adith\\appdata\\local\\programs\\python\\python37\\lib\\distutils\\dist.py\", line 985, in run_command\n",
+            "        cmd_obj.run()\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\command\\egg_info.py\", line 297, in run\n",
+            "        self.find_sources()\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\command\\egg_info.py\", line 304, in find_sources\n",
+            "        mm.run()\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\command\\egg_info.py\", line 535, in run\n",
+            "        self.add_defaults()\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\command\\egg_info.py\", line 571, in add_defaults\n",
+            "        sdist.add_defaults(self)\n",
+            "      File \"c:\\users\\adith\\appdata\\local\\programs\\python\\python37\\lib\\distutils\\command\\sdist.py\", line 226, in add_defaults\n",
+            "        self._add_defaults_python()\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\command\\sdist.py\", line 135, in _add_defaults_python\n",
+            "        build_py = self.get_finalized_command('build_py')\n",
+            "      File \"c:\\users\\adith\\appdata\\local\\programs\\python\\python37\\lib\\distutils\\cmd.py\", line 298, in get_finalized_command\n",
+            "        cmd_obj = self.distribution.get_command_obj(command, create)\n",
+            "      File \"c:\\users\\adith\\appdata\\local\\programs\\python\\python37\\lib\\distutils\\dist.py\", line 857, in get_command_obj\n",
+            "        klass = self.get_command_class(command)\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\dist.py\", line 753, in get_command_class\n",
+            "        self.cmdclass[command] = cmdclass = ep.load()\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\pkg_resources\\__init__.py\", line 2446, in load\n",
+            "        return self.resolve()\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\pkg_resources\\__init__.py\", line 2452, in resolve\n",
+            "        module = __import__(self.module_name, fromlist=['__name__'], level=0)\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\command\\build_py.py\", line 15, in <module>\n",
+            "        from setuptools.lib2to3_ex import Mixin2to3\n",
+            "      File \"d:\\adi\\work\\clg\\capstone\\capstone\\venv\\lib\\site-packages\\setuptools\\lib2to3_ex.py\", line 12, in <module>\n",
+            "        from lib2to3.refactor import RefactoringTool, get_fixers_from_package\n",
+            "      File \"c:\\users\\adith\\appdata\\local\\programs\\python\\python37\\lib\\lib2to3\\refactor.py\", line 19, in <module>\n",
+            "        import logging\n",
+            "      File \"C:\\Users\\adith\\AppData\\Local\\Temp\\pip-install-xxvn6ssr\\logging_97fc9a54fbe04b75bc8a877d62614080\\logging\\__init__.py\", line 618\n",
+            "\n",
+            "  Downloading logging-0.4.9.6.tar.gz (96 kB)\n",
+            "        raise NotImplementedError, 'emit must be implemented '\\\n",
+            "                                 ^\n",
+            "    SyntaxError: invalid syntax\n",
+            "    ----------------------------------------\n",
+            "WARNING: Discarding https://files.pythonhosted.org/packages/93/4b/979db9e44be09f71e85c9c8cfc42f258adfb7d93ce01deed2788b2948919/logging-0.4.9.6.tar.gz#sha256=26f6b50773f085042d301085bd1bf5d9f3735704db9f37c1ce6d8b85c38f2417 (from https://pypi.org/simple/logging/). Command errored out with exit status 1: python setup.py egg_info Check the logs for full command output.\n",
+            "ERROR: Could not find a version that satisfies the requirement logging (from versions: 0.4.9.6)\n",
+            "ERROR: No matching distribution found for logging\n"
+          ]
         }
       ]
     },
@@ -73,8 +137,20 @@
         "# Load pre-trained model tokenizer (vocabulary)\n",
         "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')"
       ],
-      "execution_count": 20,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'torch'",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-3-a1119960d98c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpytorch_pretrained_bert\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBertTokenizer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBertModel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBertForMaskedLM\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# OPTIONAL: if you want to have more information on what's happening, activate the logger as follows\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
